# Optedge

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  archive.py  async_http.py  chain_provider.py  config.py  data_provider.py  demo_data.py  diagnose_gpu.py  ibkr_provider.py  install.bat  install.sh  polygon_provider.py  pricing_models.py  pyproject.toml  requirements.txt  run.bat  run.py  setup_check.py  start_cockpit.bat  universe_filter.py  utils.py
.github/: AUTOMATION.md  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backtest/: README.md  __init__.py  alpha_decay.py  calibration.py  drawdown_breaker.py  edge_lab.py  exit_learning.py  exit_rules.py  fixed_horizon.py  forward.py  futures_positions.py  futures_sizing.py  historical.py  leaps_edge.py  model_accuracy.py  option_expiry.py  option_history.py  portfolio_greeks.py  positions.py  predictor.py  share_positions.py  sizing.py  track.py
dashboard/: README.md  __init__.py  build.py
data/: .keep  README.md
data/weights/: .keep  futures_agri.json  futures_crypto.json  futures_equity.json  options_call.json
docs/: ARCHITECTURE.md  DATA_SOURCES.md  EDGE_LAB.md  FACTOR_LIBRARY.md  FREE_DATA_ROADMAP.md  LEAPS_SWING.md  LIMITATIONS.md  PROJECT_MAP.md  README.md  RISK_MODEL.md  THIRD_PARTY_FORWARD_TESTING.md  VALIDATION.md
engines/: README.md  __init__.py  analyst.py  backtest_engine.py  buybacks.py  cboe_symbol_data.py  cluster_buys.py  congress.py  cot.py  credit_spread.py  dark_pool.py  diagnose.py  earnings.py  eia.py  fda_calendar.py  finbert.py  finnhub_provider.py  form_144.py  forward_test.py  fred_public.py  fundamentals.py  futures.py  google_trends.py  hyperliquid.py  insider.py  iv_surface.py  learning.py  macro.py  mispricing.py  nasdaq_screener.py  news.py  nitter.py  put_call.py  r_options.py  regsho_threshold.py  sec_ftd.py  sector_etf_flow.py  sector_rs.py  sentiment.py  short_interest.py  (+12 more)
examples/: README.md  validation_summary.example.json
fusion/: README.md  __init__.py  attribution.py  rank.py
logs/: .keep  README.md
optedge/: README.md  __init__.py  __main__.py  cli.py  engine_registry.py  evidence_capture.py  http_identity.py  leaps_swing.py  orchestrator.py  robinhood_automation.py  robinhood_connection.py  robinhood_exit_analysis.py  robinhood_finalist.py  robinhood_mcp.py  robinhood_option_execution.py  robinhood_option_history_sync.py  robinhood_snapshot_sync.py  strategy_profile.py
optedge/default_weights/: futures_agri.json  futures_crypto.json  futures_currency.json  futures_energy.json  futures_equity.json  futures_metal.json  futures_treasury.json  options_call.json  options_put.json  shares_long.json
optedge/modes/: __init__.py  backtest.py  forward.py  loop.py  scan.py
reports/: README.md  __init__.py  heston_stability.py  validation_report.py
risk/: README.md  __init__.py  account_drawdown.py  portfolio.py  research_guard.py  trade_plan.py
scripts/: README.md  auto_agentic_paper.py  check_ibkr_connection.py  export_external_paper_track.py  export_robinhood_agentic_queue.py  local_cockpit.py  lookup_symbol.py  normalize_robinhood_broker_snapshot.py  refresh_robinhood_option_history.py  research_jobs.py  robinhood_research_bridge.py  sec_filings.py  symbol_resolver.py
telemetry/: README.md  __init__.py  cache_stats.py  engine_health.py  health.py  perf.py
tests/: README.md  test_account_drawdown.py  test_archive.py  test_auto_agentic_paper.py  test_calibration.py  test_cboe_symbol_data.py  test_chain_provider_tradier.py  test_cli.py  test_dashboard_data.py  test_data_provider_stooq.py  test_drawdown_breaker.py  test_edge_lab.py  test_evidence_capture.py  test_evidence_quarantine.py  test_examples.py  test_exit_learning.py  test_exit_rules.py  test_external_paper_track.py  test_finbert_batching.py  test_fixed_horizon.py  test_fred_public.py  test_futures_positions.py  test_futures_sizing.py  test_http_identity.py  test_ibkr_provider.py  test_leaps_edge.py  test_leaps_swing.py  test_learning_weights.py  test_local_cockpit.py  test_lookup_symbol.py  test_nasdaq_screener.py  test_news.py  test_option_expiry.py  test_option_history.py  test_option_positions.py  test_orchestrator_hygiene.py  test_performance_cache.py  test_portfolio.py  test_predictor_guard.py  test_pricing.py  (+27 more)
