[project]
name = "optedge"
description = "Free multi-factor options, shares, futures, and value research cockpit."
requires-python = ">=3.11,<3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "aiohttp>=3.9.0",
  "beautifulsoup4>=4.12",
  "curl_cffi>=0.6",
  "httpx[http2]>=0.27.0",
  "lxml>=4.9",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pdfplumber>=0.10",
  "pyarrow>=14.0",
  "pytrends>=4.9.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "vaderSentiment>=3.3",
  "yfinance>=0.2.40",
]

[project.scripts]
optedge = "optedge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "archive",
  "async_http",
  "chain_provider",
  "config",
  "data_provider",
  "demo_data",
  "diagnose_gpu",
  "pricing_models",
  "setup_check",
  "universe_filter",
  "utils",
]

[tool.setuptools.dynamic]
version = {attr = "optedge.__version__"}

[tool.setuptools.package-data]
optedge = ["default_weights/*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "backtest*",
  "dashboard*",
  "engines*",
  "fusion*",
  "optedge*",
  "reports*",
  "risk*",
  "scripts*",
  "telemetry*",
]
exclude = ["archive*", "data*", "examples*", "logs*", "tests*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
