# Defines package metadata, dependencies, the CLI entry point, build settings, and test/lint configuration.

[project]
name = "optedge"
description = "Local-first, evidence-driven swing-trading research workstation."
requires-python = ">=3.11,<3.14"
readme = "README.md"
dynamic = ["version"]
license = "MIT"
authors = [
  {name = "kaiuribess"},
]
keywords = [
  "backtesting",
  "finance",
  "options",
  "portfolio-risk",
  "swing-trading",
  "trading-research",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "aiohttp>=3.9.0",
  "beautifulsoup4>=4.12",
  "curl_cffi>=0.6",
  "httpx[http2]>=0.27.0",
  "jsonschema>=4.20",
  "keyring>=25.7,<26",
  "lxml>=4.9",
  "matplotlib>=3.8",
  "mcp>=1.28,<2",
  "numpy>=1.24",
  "pandas>=2.0",
  "pdfplumber>=0.10",
  "psutil>=5.9",
  "pyarrow>=14.0",
  "pytrends>=4.9.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "vaderSentiment>=3.3",
  "yfinance>=0.2.40",
]

[project.urls]
Homepage = "https://github.com/kaiuribess/Optedge"
Documentation = "https://github.com/kaiuribess/Optedge/tree/main/docs"
Issues = "https://github.com/kaiuribess/Optedge/issues"
Repository = "https://github.com/kaiuribess/Optedge.git"

[project.scripts]
optedge = "optedge.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.6",
]
sentiment = [
  "torch>=2.6",
  "transformers>=4.48",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "archive",
  "async_http",
  "chain_provider",
  "config",
  "data_provider",
  "demo_data",
  "diagnose_gpu",
  "pricing_models",
  "setup_check",
  "universe_filter",
  "utils",
]

[tool.setuptools.dynamic]
version = {attr = "optedge.__version__"}

[tool.setuptools.package-data]
optedge = ["default_weights/*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "backtest*",
  "dashboard*",
  "engines*",
  "fusion*",
  "optedge*",
  "reports*",
  "risk*",
  "scripts*",
  "telemetry*",
]
exclude = ["archive*", "data*", "examples*", "logs*", "tests*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
